# Project-OpenDIVA

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: Structure.puml
include/OpenDIVA/: Grade.hpp  Gui.hpp  Note.hpp  Song.hpp  SongLoader.hpp  Type.hpp
include/OpenDIVA/Gui/: Gui.hpp  GuiButton.hpp  GuiMainMenu.hpp
res/: arrow-sprite.xcf
src/: Beatmap.cpp  Beatmap.hpp  Game.cpp  Game.hpp  Gui.cpp  GuiButton.cpp  GuiMainMenu.cpp  Level.cpp  Level.hpp  Note.cpp  Note.hpp  NotePack.hpp  OpenDIVA.cpp  OpenDIVA.hpp  Song.cpp  Song.hpp  SongLoader.cpp  Sprite.cpp  Sprite.hpp  Type.cpp  main.cpp  test.cpp
tests/: song.json  song_info.json
